Early html/css features

--- a/index.html
+++ b/index.html
@@ -3,8 +3,33 @@
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
+  <nav>
+    <h1>What's for Dinner?</h1>
+    <button>Add A Recipe</button>
+  </nav>
   <body>
+    <div class="left-box"></div>
+    <div class="right-box">POT IMAGE</div>
   </body>
   <script type="text/javascript" src="main.js"></script>
 </html>
 
+<!-- <nav>
+  <img src="./turing-school-logo" alt="Turing School logo" />
+  <ul>
+    <li>Programs</li>
+    <li>Try Coding</li>
+    <li>Outcomes</li>
+    <li>Team</li>
+    <li>Hire</li>
+    <li>FAQs</li>
+    <li>Perspectives</li>
+    <li>Contact</li>
+  </ul>
+</nav>
+<main>
+  <h1>Hire A Turing Grad</h1>
+  <p>Need to hire...</p>
+  <p>Join 200+ tech industry partners...</p>
+  <button type="button" name="browse-button">BROWSE GRADS FOR HIRE</button>
+</main> -->
