Update js progress

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
           <button class="get-recipe">LET'S COOK!</button>
       </div>
       <div class="right-box">
-      <img src="assets/cookpot.svg" alt="POT IMAGE" />
+        <img class="pic" src="assets/cookpot.svg" alt="POT IMAGE" />
+        <section class="suggestion">Suggestion</section>
       </div>
     </div>
   </body>
