--- a/index.html
+++ b/index.html
@@ -5,34 +5,38 @@
   </head>
   <nav>
     <h1>What's for Dinner?</h1>
-    <button class="add-a-recipe">Add A Recipe</button>
+    <button class="add-a-recipe">ADD A RECIPE</button>
   </nav>
   <body>
     <div class="box">
       <div class="left-box" id="promptandoptions">
-          <p class="prompt">What are you looking for?*</p>
+          <p class="prompt">What are you looking for?<span style="color: red">*</span></p>
           <div class="radio-button">
-            <input type="radio" id="foodType1" name="food" value="side"
+            <input type="radio" id="side" name="food" value="side"
                   checked>
-            <label for="foodType1">Side</label>
+            <label for="side">Side</label>
           </div>
           <div class="radio-button">
-            <input type="radio" id="foodType2" name="food" value="main-dish"
-            <label for="foodType2">Main Dish</label>
+            <input type="radio" id="main-dish" name="food" value="main-dish"
+            <label for="main-dish">Main Dish</label>
           </div>
           <div class="radio-button">
-            <input type="radio" id="foodType3" name="food" value="Dessert"
-            <label for="foodType3">Dessert</label>
+            <input type="radio" id="dessert" name="food" value="dessert"
+            <label for="dessert">Dessert</label>
           </div>
           <div class="radio-button">
-            <input type="radio" id="foodType4" name="food" value="entire-meal"
-            <label for="foodType4">Entire Meal</label>
+            <input type="radio" id="entire-meal" name="food" value="entire-meal"
+            <label for="entire-meal">Entire Meal</label>
           </div>
-          <button class="get-recipe" onclick="selectDish()">LET'S COOK!</button>
+          <button class="lets-cook" onclick="selectDish()">LET'S COOK!</button>
       </div>
       <div class="right-box">
-        <img class="pic" src="assets/cookpot.svg" alt="POT IMAGE" />
-        <section class="suggestion" id="show"">Suggestion</section>
+        <img class="cookPot" src="assets/cookpot.svg" alt="POT IMAGE" />
+        <section> 
+          <i>You should eat:</i>
+          <br>
+          <p class="suggestion" id="suggestion">Suggestion</p>
+        </section>
       </div>
     </div>
   </body>
